fix list finished

--- a/css/block.css
+++ b/css/block.css
@@ -112,6 +112,8 @@
 
 @media screen and (max-width: 449px) and (min-width: 0) { .m_magTop45 { margin-top: 45px; } }
 
+@media screen and (max-width: 449px) and (min-width: 0) { .m_magD45 { margin-bottom: 45px !important; } }
+
 .m_padSID20 { padding: 0; }
 @media screen and (max-width: 449px) and (min-width: 0) { .m_padSID20 { padding: 0 20px; } }
 
