--- a/scss/block.scss
+++ b/scss/block.scss
@@ -218,6 +218,10 @@ $orange: rgba(255, 152, 0, 1.00); // 輔助色・橘色
   margin: 0;
 }
 
+.magTop7 {
+  margin-top: 7px;
+}
+
 .magTop15 {
   margin-top: 15px;
 }
@@ -278,6 +282,9 @@ $orange: rgba(255, 152, 0, 1.00); // 輔助色・橘色
   }
 }
 
+.padT10 {
+  padding-top: 10px;
+}
 
 .padTB15 {
   padding: 15px 0;
