--- a/scss/link.scss
+++ b/scss/link.scss
@@ -323,6 +323,10 @@ a {
   text-align: center;
   margin-top: -5px;
 
+  &.line_admin {
+    margin-top: 1px !important;
+  }
+
   &.link_iocn_gray {
     color: $gray;
     border: 1px solid $gray;
@@ -366,7 +370,7 @@ button {
   height: 40px;
   border: 0;
   @include border-radius(20px);
-  line-height: 36px;
+  line-height: 42px;
   text-align: center;
   background-color: transparent;
   font-size: 1.2rem;
@@ -387,6 +391,16 @@ button {
 
   &.c_gray {
     color: $gray;
+
+    &.member {
+      &:hover {
+        color: $orange;
+      }
+    }
+  }
+
+  &.c_lb {
+    color: $bright_blue;
 
     &.member {
       &:hover {
