--- a/css/link.css
+++ b/css/link.css
@@ -71,6 +71,7 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 .m_top_type { font-size: 1rem; font-weight: 400; color: #838fab; }
 
 .link_icon { width: 35px; height: 35px; background-color: transparent; border: 1px solid #2f31e5; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; color: #2f31e5; font-size: 1rem; line-height: 32px; float: right; text-align: center; margin-top: -5px; }
+.link_icon.line_admin { margin-top: 1px !important; }
 .link_icon.link_iocn_gray { color: #a5a5a5; border: 1px solid #a5a5a5; }
 .link_icon.link_icon_save { width: auto; height: auto; line-height: 29px; padding: 0 15px; font-weight: 600; }
 .link_icon.link_icon_search { width: 40px; height: 40px; margin-top: 0; font-size: 1.2rem; line-height: 38px; }
@@ -79,12 +80,14 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 
 button { display: inline-block; outline: 0; cursor: pointer; border: 0; }
 
-.btn_status_box { width: 40px; height: 40px; border: 0; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 36px; text-align: center; background-color: transparent; font-size: 1.2rem; float: right; }
+.btn_status_box { width: 40px; height: 40px; border: 0; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 42px; text-align: center; background-color: transparent; font-size: 1.2rem; float: right; }
 .btn_status_box.w_50 { width: 50px; line-height: 0; }
 .btn_status_box.c_blue2 { color: #092058; }
 .btn_status_box.c_green { color: #6db53a; }
 .btn_status_box.c_gray { color: #a5a5a5; }
 .btn_status_box.c_gray.member:hover { color: #ff9800; }
+.btn_status_box.c_lb { color: #2f31e5; }
+.btn_status_box.c_lb.member:hover { color: #ff9800; }
 .btn_status_box.c_blue { color: rgba(9, 32, 88, 0.8); }
 .btn_status_box.c_blue_po { position: absolute; bottom: 0; right: 0; }
 
