--- a/css/type.css
+++ b/css/type.css
@@ -15,6 +15,8 @@ h3 { font-size: 1.3rem; font-weight: 300; text-shadow: 2px 2px 4px rgba(0, 0, 0,
 
 p { display: inline-block; padding: 0; margin: 0; }
 
+.text_left { text-align: left !important; }
+
 .icon-chain { transform: rotateY(180deg); line-height: 43px !important; padding-left: 10px; }
 
 .footer_type { color: #092058; font-size: .9rem; font-weight: 300; }
@@ -76,10 +78,10 @@ input { outline: 0; background-color: transparent; }
 @media screen and (max-width: 449px) and (min-width: 0) { .input_box.input_search { float: left; } }
 .input_box.input_search90 { width: calc(100% - 90px); text-align: left; }
 @media screen and (max-width: 449px) and (min-width: 0) { .input_box.input_search90 { float: left; } }
-.input_box .tip_box { display: inline-block; position: absolute; top: 0; left: 0; width: 40px; height: 40px; z-index: 999; }
+.input_box .tip_box { display: inline-block; position: absolute; top: 0; left: 0; width: 40px; height: 40px; z-index: 888; }
 @media screen and (max-width: 449px) and (min-width: 0) { .input_box .tip_box { display: none; } }
 
-.social_box { display: inline-block; width: 44px; height: 44px; -moz-border-radius: 25px; -webkit-border-radius: 25px; border-radius: 25px; line-height: 40px; text-align: center; background-color: #092058; border: 1px solid #092058; margin-right: 9px; margin-top: -1px; margin-left: -1px; color: white; font-size: 1.2rem; z-index: 888; position: absolute; top: 0; left: 0; }
+.social_box { display: inline-block; width: 44px; height: 44px; -moz-border-radius: 25px; -webkit-border-radius: 25px; border-radius: 25px; line-height: 43px; text-align: center; background-color: #092058; border: 1px solid #092058; margin-right: 9px; margin-top: -1px; margin-left: -1px; color: white; font-size: 1.2rem; z-index: 888; position: absolute; top: 0; left: 0; }
 @media screen and (max-width: 449px) and (min-width: 0) { .social_box { width: 42px; height: 42px; line-height: 39px; } }
 .social_box.social_box2 { background-color: #2f31e5; border: 1px solid #2f31e5; }
 .social_box.member_box { background-color: #858ea6; border: 1px solid #858ea6; }
