--- a/scss/type.scss
+++ b/scss/type.scss
@@ -60,6 +60,10 @@ p {
   margin: 0;
 }
 
+.text_left {
+  text-align: left !important;
+}
+
 .icon-chain {
    transform: rotateY(180deg);
    line-height: 43px !important;
@@ -342,7 +346,7 @@ input {
     left: 0;
     width: 40px;
     height: 40px;
-    z-index: 999;
+    z-index: 888;
 
     @include range-width(0, 450px) {
       display: none;
@@ -354,7 +358,7 @@ input {
   width: 44px;
   height: 44px;
   @include border-radius(25px);
-  line-height: 40px;
+  line-height: 43px;
   text-align: center;
   background-color: $deep_blue;
   border: 1px solid $deep_blue;
