--- a/css/link.css
+++ b/css/link.css
@@ -26,6 +26,8 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 .link_deepBlue { padding: 12px 20px; font-size: .9rem; color: #092058; border: 1px solid #092058; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; }
 @media screen and (max-width: 449px) and (min-width: 0) { .link_deepBlue { width: 90%; } }
 
+.link_deepBlue2 { padding: 12px 20px; font-size: .9rem; color: white; background-color: #092058; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; }
+
 .line_brightBlue { padding: 12px 20px; font-size: .9rem; color: #2f31e5; border: 1px solid #2f31e5; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; }
 @media screen and (max-width: 449px) and (min-width: 0) { .line_brightBlue { width: 90%; } }
 
