--- a/scss/type.scss
+++ b/scss/type.scss
@@ -185,6 +185,9 @@ i {
 input {
   outline: 0;
   background-color: transparent;
+  -webkit-appearance: none;  /* Safari 和 Chrome，常用於iOS下移除內建樣式 */
+  -moz-appearance: none;     /* FireFox */
+  appearance: none;
 }
 
 .toEnter {
