--- a/scss/type.scss
+++ b/scss/type.scss
@@ -238,6 +238,7 @@ input {
   text-align: left;
   padding: 1px 2px 1px 50px;
   overflow: hidden;
+  margin: 0;
 
   &.in_LH42 {
     // font-size: .9rem;
