--- a/font/icomoon/style.css
+++ b/font/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?jk03c0');
-  src:  url('fonts/icomoon.eot?jk03c0#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?jk03c0') format('truetype'),
-    url('fonts/icomoon.woff?jk03c0') format('woff'),
-    url('fonts/icomoon.svg?jk03c0#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?vh6tjo');
+  src:  url('fonts/icomoon.eot?vh6tjo#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?vh6tjo') format('truetype'),
+    url('fonts/icomoon.woff?vh6tjo') format('woff'),
+    url('fonts/icomoon.svg?vh6tjo#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-plus:before {
+  content: "\e922";
+}
 .icon-venmo:before {
   content: "\e921";
 }
@@ -129,9 +132,6 @@
 }
 .icon-menu:before {
   content: "\e907";
-}
-.icon-plus:before {
-  content: "\e908";
 }
 .icon-search:before {
   content: "\e920";
