--- a/css/link.css
+++ b/css/link.css
@@ -61,6 +61,7 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 .footer_menu:last-child:after { display: none; }
 
 .team_title { display: inline-block; color: #092058; font-size: 1.2rem; font-weight: 700; padding-bottom: 10px; line-height: 35px; }
+.team_title.t-under { text-decoration: underline; }
 @media screen and (max-width: 449px) and (min-width: 0) { .team_title { line-height: 28px; } }
 .team_title.title_link_icon:hover { color: #2f31e5; }
 .team_title.title_link_icon:before { content: '\f0c1'; font-family: 'icon'; font-size: 1rem; margin-right: 10px; line-height: 27px; color: #858ea6; }
@@ -95,7 +96,7 @@ button { display: inline-block; outline: 0; cursor: pointer; border: 0; }
 
 .btn_add { width: 40px; height: 40px; text-align: center; background-color: transparent; color: #2f31e5; font-size: 2.2rem; padding: 0; }
 
-.no_event_btn { color: #a5a5a5; border: 1px solid #a5a5a5; pointer-events: none; cursor: default; }
+.no_event_btn { color: #a5a5a5; pointer-events: none; cursor: default; }
 
 .btn_done { display: inline-block; font-size: .9rem; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; background-color: #092058; color: white; padding: 0 15px; float: right; cursor: pointer; border: 0; line-height: 35px; }
 @media screen and (max-width: 449px) and (min-width: 0) { .btn_done { font-size: .9rem; } }
