--- a/scss/link.scss
+++ b/scss/link.scss
@@ -336,6 +336,13 @@ a {
   text-align: center;
   margin-top: -5px;
 
+  @include range-width(0, 450px) {
+    width: 40px;
+    height: 40px;
+    line-height: 38px;
+    font-size: 1.2rem;
+  }
+
   &.line_admin {
     margin-top: 1px !important;
   }
@@ -360,6 +367,20 @@ a {
     font-size: 1.2rem;
     line-height: 38px;
   }
+}
+
+.link_icon2 {
+  width: 35px;
+  height: 35px;
+  background-color: transparent;
+  border: 1px solid $bright_blue;
+  @include border-radius(20px);
+  color: $bright_blue;
+  font-size: 1rem;
+  line-height: 32px;
+  float: right;
+  text-align: center;
+  margin-top: -5px;
 }
 
 .no_event_icon {
