--- a/css/link.css
+++ b/css/link.css
@@ -60,9 +60,9 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 .footer_menu:hover { color: #2f31e5; }
 .footer_menu:last-child:after { display: none; }
 
-.team_title { display: inline-block; color: #092058; font-size: 1.2rem; font-weight: 700; padding-bottom: 10px; line-height: 35px; }
+.team_title { display: inline-block; width: 80%; color: #092058; font-size: 1.2rem; font-weight: 700; padding-bottom: 20px; line-height: 25px; }
 .team_title.t-under { text-decoration: underline; }
-@media screen and (max-width: 449px) and (min-width: 0) { .team_title { line-height: 28px; } }
+@media screen and (max-width: 449px) and (min-width: 0) { .team_title { width: 80%; line-height: 28px; } }
 .team_title.title_link_icon:hover { color: #2f31e5; }
 .team_title.title_link_icon:before { content: '\f0c1'; font-family: 'icon'; font-size: 1rem; margin-right: 10px; line-height: 27px; color: #858ea6; }
 .team_title.no_pb10 { padding-bottom: 0; }
@@ -77,7 +77,7 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 @media screen and (max-width: 449px) and (min-width: 0) { .link_icon { width: 40px; height: 40px; line-height: 38px; font-size: 1.2rem; } }
 .link_icon.line_admin { margin-top: 1px !important; }
 .link_icon.link_iocn_gray { color: #a5a5a5; border: 1px solid #a5a5a5; }
-.link_icon.link_icon_save { width: auto; height: auto; line-height: 29px; padding: 0 15px; font-weight: 600; }
+.link_icon.link_icon_save { width: auto; height: auto; line-height: 35px; padding: 0 15px; font-weight: 600; font-size: .9rem; }
 .link_icon.link_icon_search { width: 40px; height: 40px; margin-top: 0; font-size: 1.2rem; line-height: 38px; }
 
 .link_icon2 { width: 35px; height: 35px; background-color: transparent; border: 1px solid #2f31e5; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; color: #2f31e5; font-size: 1rem; line-height: 32px; float: right; text-align: center; margin-top: -5px; }
