--- a/scss/type.scss
+++ b/scss/type.scss
@@ -506,10 +506,11 @@ input:-webkit-autofill {
 
   @include range-width(0, 450px) {
     display: inline-block;
-    width: calc(100% - 20px * 2);
+    // width: calc(100% - 20px * 2);
+    width: 100%;
     height: 1px;
     border-top: 1px dotted rgba(165, 165, 165, .5); 
-    margin: 30px 20px;
+    margin: 30px 0;
   }
 }
 .m_border_all {
