--- a/css/type.css
+++ b/css/type.css
@@ -124,7 +124,7 @@ input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofi
 .borderGray { border: 1px solid rgba(165, 165, 165, 0.5); }
 
 .m_border { display: none; }
-@media screen and (max-width: 449px) and (min-width: 0) { .m_border { display: inline-block; width: 100%; height: 1px; border-top: 1px dotted rgba(165, 165, 165, 0.5); margin: 30px 0; } }
+@media screen and (max-width: 449px) and (min-width: 0) { .m_border { display: inline-block; width: calc(100% - 20px * 2); height: 1px; border-top: 1px dotted rgba(165, 165, 165, 0.5); margin: 30px 0; } }
 
 .m_border_all { display: none; }
 @media screen and (max-width: 449px) and (min-width: 0) { .m_border_all { display: inline-block; width: 100%; height: 1px; border-top: 1px dotted rgba(165, 165, 165, 0.5); margin: 10px 0; } }
