--- a/css/type.css
+++ b/css/type.css
@@ -30,6 +30,7 @@ i { display: inline-block; font-size: .9rem; font-weight: 900; margin: 0 10px; }
 .lineHeight45 { line-height: 45px; }
 
 .team_type { display: inline-block; width: 100%; color: #092058; font-size: .9rem; font-weight: 400; }
+.team_type.t_ds { width: auto; }
 @media screen and (max-width: 449px) and (min-width: 0) { .team_type { font-size: .9rem; } }
 .team_type.team_gray { color: #a5a5a5; }
 
@@ -48,11 +49,13 @@ i { display: inline-block; font-size: .9rem; font-weight: 900; margin: 0 10px; }
 
 .type_13 { display: inline-block; width: 100%; color: #a5a5a5; font-size: .9rem; padding-bottom: 10px; }
 
+.type_account { display: inline-block; width: 100%; color: #092058; font-size: 1rem; padding: 0 0 20px 0; }
+
 .big_blue_type { font-size: 2.8rem; font-weight: 700; color: #092058; }
 
 .link_code { font-size: 2.8rem; font-weight: 900; color: #858ea6; }
 
-input { outline: 0; background-color: transparent; -webkit-appearance: none; /* Safari 和 Chrome，常用於iOS下移除內建樣式 */ -moz-appearance: none; /* FireFox */ appearance: none; }
+input { outline: 0; background-color: transparent; -webkit-appearance: value; /* Safari 和 Chrome，常用於iOS下移除內建樣式 */ -moz-appearance: value; /* FireFox */ appearance: value; }
 
 input:-webkit-autofill { transition: background-color 5000s ease-in-out 0s; }
 input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active { transition: background-color 5000s ease-in-out 0s; }
