--- a/scss/icon.scss
+++ b/scss/icon.scss
@@ -1,6 +1,6 @@
 //
 // @author      OA Wu <comdan66@gmail.com>
-// @copyright   Copyright (c) 2015 - 2020, Ginkgo
+// @copyright   Copyright (c) 2015 - 2021, Ginkgo
 // @license     http://opensource.org/licenses/MIT  MIT License
 // @link        https://www.ioa.tw/
 //
@@ -33,7 +33,7 @@
 .icon-linkedin:before { content: "\e90e"; }
 .icon-twitter:before { content: "\e90f"; }
 .icon-youtube:before { content: "\e910"; }
-.icon-tiktok:before { content: "\e911"; }
+.icon-TikTok:before { content: "\e911"; }
 .icon-discord:before { content: "\e912"; }
 .icon-slack:before { content: "\e913"; }
 .icon-skype:before { content: "\e914"; }
@@ -46,10 +46,6 @@
 .icon-user---anticoncopy-3:before { content: "\e91b"; }
 .icon-Address-Card---FontAwesomeCopy-3:before { content: "\e91c"; }
 .icon-qrcode---FontAwesome:before { content: "\e91d"; }
-.icon-eye:before { content: "\f06e"; }
-.icon-eye-slash:before { content: "\f070"; }
-.icon-chain:before { content: "\f0c1"; }
-.icon-link:before { content: "\f0c1"; }
 .icon-error:before { content: "\e91e"; }
 .icon-content_copy:before { content: "\e902"; }
 .icon-createmode_editedit:before { content: "\e903"; }
@@ -60,3 +56,8 @@
 .icon-menu:before { content: "\e907"; }
 .icon-search:before { content: "\e920"; }
 .icon-x:before { content: "\e909"; }
+.icon-home:before { content: "\e908"; }
+.icon-eye:before { content: "\f06e"; }
+.icon-eye-slash:before { content: "\f070"; }
+.icon-chain:before { content: "\f0c1"; }
+.icon-link:before { content: "\f0c1"; }
