--- a/scss/type.scss
+++ b/scss/type.scss
@@ -104,6 +104,10 @@ i {
   font-size: .9rem;
   font-weight: 400;
 
+  &.t_ds {
+    width: auto;
+  }
+
   @include range-width(0, 450px) {
     font-size: .9rem;
   }
@@ -167,6 +171,15 @@ i {
   padding-bottom: 10px;
 }
 
+.type_account {
+  display: inline-block;
+  width: 100%;
+  color: $deep_blue;
+  font-size: 1rem;
+  padding: 0 0 20px 0;
+}
+
+
 .big_blue_type {
   font-size: 2.8rem;
   font-weight: 700;
@@ -185,9 +198,9 @@ i {
 input {
   outline: 0;
   background-color: transparent;
-  -webkit-appearance: none;  /* Safari 和 Chrome，常用於iOS下移除內建樣式 */
-  -moz-appearance: none;     /* FireFox */
-  appearance: none;
+  -webkit-appearance: value;  /* Safari 和 Chrome，常用於iOS下移除內建樣式 */
+  -moz-appearance: value;     /* FireFox */
+  appearance: value;
 }
 
 input:-webkit-autofill {
