--- a/css/public.css
+++ b/css/public.css
@@ -25,12 +25,12 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header nav { display: none; } }
 .page_boxs .page_box header nav .nav_boxs { display: inline-block; width: 100%; float: left; *zoom: 1; }
 .page_boxs .page_box header nav .nav_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
-.page_boxs .page_box header nav .nav_boxs > span { position: relative; }
-.page_boxs .page_box header nav .nav_boxs > span div { display: none; }
-.page_boxs .page_box header nav .nav_boxs > span:hover > div { display: block; width: 140px; background-color: white; margin-left: -52px; z-index: 888; position: absolute; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; -moz-box-shadow: 0 0px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 0px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 0px 4px 0 rgba(0, 35, 11, 0.2); }
-.page_boxs .page_box header nav .nav_boxs > span:hover > div > a { display: block; width: 100%; height: 50px; line-height: 50px; font-size: .9rem; float: none; text-align: left; color: #092058; text-decoration: none; border-bottom: 1px solid rgba(165, 165, 165, 0.5); text-align: center; -moz-transition: background-color 0.3s; -o-transition: background-color 0.3s; -webkit-transition: background-color 0.3s; transition: background-color 0.3s; }
-.page_boxs .page_box header nav .nav_boxs > span:hover > div > a:last-child { border-bottom: 0; }
-.page_boxs .page_box header nav .nav_boxs > span:hover > div > a:hover { color: #2f31e5; }
+.page_boxs .page_box header nav .nav_boxs > span, .page_boxs .page_box header nav .nav_boxs > .topmenu { display: inline-block; position: relative; }
+.page_boxs .page_box header nav .nav_boxs > span div, .page_boxs .page_box header nav .nav_boxs > .topmenu div { display: none; }
+.page_boxs .page_box header nav .nav_boxs > span:hover > div, .page_boxs .page_box header nav .nav_boxs > .topmenu:hover > div { display: block; width: 140px; background-color: white; margin-left: -52px; z-index: 888; position: absolute; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; -moz-box-shadow: 0 0px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 0px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 0px 4px 0 rgba(0, 35, 11, 0.2); }
+.page_boxs .page_box header nav .nav_boxs > span:hover > div a, .page_boxs .page_box header nav .nav_boxs > .topmenu:hover > div a { display: block; width: 100%; height: 50px; line-height: 50px; font-size: .9rem; float: none; text-align: left; color: #092058; text-decoration: none; border-bottom: 1px solid rgba(165, 165, 165, 0.5); text-align: center; -moz-transition: background-color 0.3s; -o-transition: background-color 0.3s; -webkit-transition: background-color 0.3s; transition: background-color 0.3s; }
+.page_boxs .page_box header nav .nav_boxs > span:hover > div a:last-child, .page_boxs .page_box header nav .nav_boxs > .topmenu:hover > div a:last-child { border-bottom: 0; }
+.page_boxs .page_box header nav .nav_boxs > span:hover > div a:hover, .page_boxs .page_box header nav .nav_boxs > .topmenu:hover > div a:hover { color: #2f31e5; }
 .page_boxs .page_box header nav .nav_boxs > span, .page_boxs .page_box header nav .nav_boxs > a { display: inline-block; cursor: pointer; height: 37px; line-height: 37px; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; *zoom: 1; color: #092058; font-size: .9rem; font-weight: 400; }
 .page_boxs .page_box header nav .nav_boxs > span:after, .page_boxs .page_box header nav .nav_boxs > a:after { display: table; content: ""; line-height: 0; clear: both; }
 .page_boxs .page_box header nav .nav_boxs > span:hover, .page_boxs .page_box header nav .nav_boxs > span:active, .page_boxs .page_box header nav .nav_boxs > a:hover, .page_boxs .page_box header nav .nav_boxs > a:active { color: #2f31e5; text-decoration: underline; }
@@ -44,6 +44,17 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 .page_boxs .page_box header nav .nav_boxs > span.link_login2:after, .page_boxs .page_box header nav .nav_boxs > a.link_login2:after { display: none; }
 .page_boxs .page_box header .m_Hamburg { display: none; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header .m_Hamburg { display: inline-block; float: right; width: 30px; height: 30px; color: #092058; font-size: 1.6rem; margin-top: 6px; } }
+.page_boxs .page_box ul { display: inline-block; list-style-type: none; margin: 0; padding: 0; overflow: hidden; color: #092058; font-size: .9rem; font-weight: 400; }
+.page_boxs .page_box li { float: left; }
+.page_boxs .page_box li a { display: inline-block; color: #092058; text-align: center; padding: 14px 16px; text-decoration: none; }
+.page_boxs .page_box .dropbtn { display: inline-block; color: #092058; text-align: center; padding: 14px 16px; text-decoration: none; }
+.page_boxs .page_box li a:hover, .page_boxs .page_box .dropdown:hover .dropbtn { text-decoration: underline; }
+.page_boxs .page_box li.dropdown { display: inline-block; }
+.page_boxs .page_box li.dropdown:after { display: inline-block; content: '・'; margin: 0 10px 0 0; line-height: 45px; }
+.page_boxs .page_box .dropdown-content { display: none; position: absolute; color: #092058; background-color: white; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); z-index: 1; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; }
+.page_boxs .page_box .dropdown-content a { color: #092058; padding: 12px 16px; text-decoration: none; display: block; text-align: left; border-bottom: 1px solid rgba(165, 165, 165, 0.5); }
+.page_boxs .page_box .dropdown-content a:hover { color: #2f31e5; text-decoration: none; }
+.page_boxs .page_box .dropdown:hover .dropdown-content { display: block; }
 .page_boxs .page_box main .cent_boxs { display: inline-block; width: 100%; background-color: white; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; -moz-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); padding: 35px 0; *zoom: 1; }
 .page_boxs .page_box main .cent_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
 .page_boxs .page_box main .cent_boxs.cent_web { display: inline-block; margin-bottom: 20px; padding: 20px 0; }
