--- a/scss/public.scss
+++ b/scss/public.scss
@@ -128,7 +128,8 @@ $orange: rgba(255, 152, 0, 1.00); // 輔助色・橘色
           float: left;
           @include clearfix();
 
-          > span {
+          > span, > .topmenu {
+            display: inline-block;
             position: relative;
 
             div {display: none;}
@@ -144,7 +145,7 @@ $orange: rgba(255, 152, 0, 1.00); // 輔助色・橘色
                 @include border-radius(4px);
                 @include box-shadow(0 0px 4px 0 rgba(0, 35, 11, .2));
 
-                > a {
+                a {
                   display: block;
                   width: 100%;
                   height: 50px;
@@ -258,6 +259,84 @@ $orange: rgba(255, 152, 0, 1.00); // 輔助色・橘色
         }
       }
     }
+
+
+    ul {
+      display: inline-block;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      color: $deep_blue;
+      font-size: .9rem;
+      font-weight: 400;
+    }
+
+    li {
+      float: left;
+
+      a {
+        display: inline-block;
+        color: $deep_blue;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+    }
+
+    .dropbtn {
+      display: inline-block;
+      color: $deep_blue;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+
+    li a:hover, .dropdown:hover .dropbtn {
+      text-decoration: underline;
+    }
+
+    li.dropdown {
+      display: inline-block;
+
+      &:after {
+        display: inline-block;
+        content: '・';
+        margin: 0 10px 0 0;
+        line-height: 45px;
+      }
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      // color: $deep_blue;
+      background-color: white;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+      @include border-radius(4px);
+      
+
+      a {
+        color: $deep_blue;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+        border-bottom: 1px solid $gray2;
+
+        &:hover {
+          color: $bright_blue;
+          text-decoration: none;
+        }
+      }
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
 
     main {
       .cent_boxs {
